переписал приложение без использования useContex и useReducer

--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -2,3 +2,12 @@
   margin: 6% auto;
   max-width: 50%;
 }
+
+.loader, .isNotFound {
+  text-align: center;
+  margin-top: 20%;
+}
+
+.isNotFound {
+  font-size: 24px;
+}
