--- a/src/components/WeatherInfo/WeatherInfo.module.scss
+++ b/src/components/WeatherInfo/WeatherInfo.module.scss
@@ -8,11 +8,6 @@
   border-radius: 14px;
 }
 
-.loader {
-  margin-top: 20%;
-  text-align: center;
-}
-
 .header {
   display: flex;
   align-items: center;
@@ -40,4 +35,12 @@
 
 .icon {
   width: 90px;
+}
+
+.min {
+  margin-left: 10px;
+}
+
+.feelsLike {
+  margin-left: 10px;
 }
