добавил прогноз на 7 дней

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-
 .app {
-
+  background-color: #f0f0f0;
+  height: 100vh;
 }
 
