--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,11 +1,14 @@
 .navbar {
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   height: 70px;
-  padding: 0 25%;
+  padding: 0 20%;
 }
 
 .icon {
+  width: 18px;
   position: relative;
+  top: 2px;
   right: 30px;
 }
