--- a/src/components/DailyForecasts/DailyForecast.module.scss
+++ b/src/components/DailyForecasts/DailyForecast.module.scss
@@ -1,6 +1,6 @@
 .dailyForecasts {
-  width: fit-content;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   min-height: 350px;
   margin-top: 10px;
@@ -11,9 +11,9 @@
   border-radius: 8px;
 
   .dayForecast {
-    margin: 4px;
+    margin: 10px;
     padding: 8px;
-    width: 120px;
+    width: 115px;
     height: 240px;
     transition: box-shadow .08s linear;
 
