--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,13 @@
-.navbar {
+.header {
   background-color: #fff;
-  display: flex;
-  justify-content: space-between;
+}
+
+.navbar {
+  max-width: 60%;
   height: 70px;
-  padding: 0 20%;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: space-between;
 
   .logo {
     padding-top: 12px;
@@ -12,7 +16,7 @@
       width: 40px;
       padding-bottom: 4px;
     }
-  
+
     .name {
       margin-left: 10px;
     }
@@ -20,20 +24,20 @@
 
   .formContainer {
     .input {
-      height: 35px;
-      width: 500px;
+      height: 40px;
+      width: 400px;
       padding-left: 8px;
       border: 1px solid rgb(172, 172, 172);
       border-radius: 4px;
       outline-color: rgb(79, 76, 238);
       outline-width: 1px;
     }
-  
+
     .searchIcon {
+      position: absolute;
       width: 18px;
-      position: relative;
-      top: 2px;
-      right: 30px;
+      right: 10px;
+      top: 28px;
     }
 
     .addresses {
@@ -63,4 +67,3 @@
     }
   }
 }
-
