--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -25,7 +25,7 @@
   .formContainer {
     .input {
       height: 40px;
-      width: 400px;
+      width: 500px;
       padding-left: 8px;
       border: 1px solid rgb(172, 172, 172);
       border-radius: 4px;
@@ -46,22 +46,28 @@
       position: absolute;
       background-color: #fff;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      border-radius: 0 0 10px 10px;
       list-style: none;
 
       .address {
-        display: flex;
-        align-items: center;
-        padding: 8px 0 8px 10px;
-        border-radius: 2px;
-        line-height: 1.3em;
+        .button {
+          display: flex;
+          align-items: center;
+          text-align: left;
+          padding: 8px;
+          font-size: 14px;
+          width: 100%;
+  
+          background-color: #fff;
+          border: none;
 
-        &:hover {
-          background-color: rgb(207, 207, 224);
-        }
+          &:hover {
+            background-color: rgb(207, 207, 224);
+          }
 
-        &:last-child {
-          padding-bottom: 16px;
+          &:focus {
+            background-color: rgb(207, 207, 224);
+            outline: none;
+          }
         }
       }
     }
