--- a/src/components/DailyForecasts/DailyForecast.module.scss
+++ b/src/components/DailyForecasts/DailyForecast.module.scss
@@ -1,21 +1,37 @@
 .dailyForecasts {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   min-height: 350px;
   margin-top: 10px;
-  padding: 20px 20px 0 20px;
   font-size: 14px;
   background-color: #fff;
   box-shadow: 0 4px 8px rgba(0, 0, 0, .2);
   border-radius: 8px;
 
+  @media screen and (max-width: 1440px) {
+    min-height: 340px;
+  }
+
+  @media screen and (max-width: 1366px) {
+    min-height: 280px;
+  }
+
+  @media screen and (max-width: 414px) {
+    border-radius: 0;
+  }
+
   .dayForecast {
     margin: 10px;
     padding: 8px;
-    width: 115px;
+    width: 110px;
     height: 240px;
     transition: box-shadow .08s linear;
+
+    @media screen and (max-width: 1440px) {
+      width: 105px;
+    }
 
     &:hover {
       box-shadow: 0 8px 16px rgba(0, 0, 0, .2);
