--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,8 +9,21 @@
   padding: 0;
   justify-content: space-between;
 
+  @media screen and (max-width: 1440px) {
+    max-width: 80%;
+  }
+
+  @media screen and (max-width: 414px) {
+    height: 60px;
+    max-width: 100%;
+  }
+
   .logo {
     padding-top: 12px;
+
+    @media screen and (max-width: 414px) {
+      display: none;
+    }
 
     .cloudIcon {
       width: 40px;
@@ -23,14 +36,26 @@
   }
 
   .formContainer {
+    @media screen and (max-width: 414px) {
+      width: 100%
+    }
+
     .input {
-      height: 40px;
+      height: 35px;
       width: 500px;
       padding-left: 8px;
       border: 1px solid rgb(172, 172, 172);
       border-radius: 4px;
       outline-color: rgb(79, 76, 238);
       outline-width: 1px;
+
+      @media screen and (max-width: 414px) {
+        width: 100%;
+        height: 60px;
+        padding: 0 10px;
+        border: none;
+        outline: none;
+      }
     }
 
     .searchIcon {
@@ -38,15 +63,25 @@
       width: 18px;
       right: 10px;
       top: 28px;
+
+      @media screen and (max-width: 414px) {
+        top: 24px;
+        right: 5%;
+      }
     }
 
     .addresses {
       padding: 10px 0 0 0;
       width: 500px;
       position: absolute;
+      z-index: 3;
       background-color: #fff;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
       list-style: none;
+
+      @media screen and (max-width: 414px) {
+        width: 100%;
+      }
 
       .address {
         .button {
@@ -67,7 +102,7 @@
           &:focus {
             background-color: rgb(207, 207, 224);
             outline: none;
-          }
+          }  
         }
       }
     }
